[project]
name = "agent-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Praveen Koka",email = "praveen.koka@trilogy.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "google-genai (>=1.27.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langgraph (>=0.5.4,<0.6.0)",
    "fastapi (>=0.110.0,<1.0.0)",
    "uvicorn (>=0.28.0,<1.0.0)",
    "langchain-openai (>=0.1.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
