[project]
name = "agent"
version = "0.0.1"
description = "A lang graph agent"
authors = [
    { name = "Praveen Koka" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py>=1.5.1",
    "langchain>=0.3.10",
    "langchain-openai>=0.2.14",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langgraph-cli (>=0.3.6,<0.4.0)",
    "langgraph-api (>=0.2.110,<0.3.0)",
    "langgraph-runtime-inmem (>=0.6.5,<0.7.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "helper (>=2.5.0,<3.0.0)",
    "tavily-python (>=0.7.10,<0.8.0)",
    "langgraph-checkpoint-sqlite (>=2.0.11,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "agent-evolve @ file:///Users/praveenkoka/koka/tril/agent_evolution/agent_evolve",
]



[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.poetry.dependencies]
python = "^3.11"
agent-evolve = {develop = true}


